Refactor employee CLI: - index.js: loop-based input, push new employees to memory - database.js: fixed table schema, persistent DB connection, parse dates/booleans - currency.js: safe conversion, uppercase currency, error handling - ESLint + Prettier: switched from Airbnb to recommended rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,6 @@
 {
-  "extends": "airbnb",
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "rules": {
-    "no-console": "off",
-    "import/extensions": "off",
-    "no-param-reassign": "off",
-    "no-underscore-dangle": "off"
+    "no-console": "off"
   }
 }
